manifests/files/syncthing/syncthing-ingress.yaml
apiVersion: traefik.io
kind: IngressRoute
metadata:
  name: syncthing
  namespace: files
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`syncthing.ygg.dedyn.io`)
      kind: Rule
      services:
        - name: syncthing
          kind: Service
          port: 80
